[metadata]
name = redbot-keyapandia123
version = 0.0.1
author = Keya Pandia
author_email = keyapandia123@gmail.com
description = Reddit bot to predict top posts
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pytest
    praw

[options.packages.find]
where = src